--- a/Spg.ProjecctDoctor.Backend/Spg.ProjecctDoctor.Backend.csproj
+++ b/Spg.ProjecctDoctor.Backend/Spg.ProjecctDoctor.Backend.csproj
@@ -5,4 +5,13 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
